modified:   css/main.css 	modified:   erotique.html 	new file:   fond/62.png 	new file:   fond/63.png 	new file:   fond/64.png 	new file:   fond/65.png 	new file:   fond/66.png 	new file:   fond/67.png 	new file:   fond/68.png 	new file:   fond/69.png 	new file:   fond/70.png 	new file:   fond/71.png 	new file:   fond/72.png 	new file:   fond/73.png 	new file:   fond/74.png 	new file:   fond/75.png 	new file:   fond/76.png 	new file:   fond/77.png 	new file:   fond/78.png 	new file:   images/pic.jpg 	new file:   images/pic2.jpg 	new file:   images/pic3.jpg 	new file:   images/pic33.jpg 	new file:   images/pic4.jpg 	new file:   images/pic44.jpg 	modified:   index.html 	modified:   js/util1.js 	modified:   recherche.html 	new file:   vendor/S

--- a/erotique.html
+++ b/erotique.html
@@ -197,6 +197,28 @@
 					</div>
 				</div>
 
+				<!-- 8 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center"
+					data-id="4">
+					<img src="images/pic3.jpg" class="card-img-top manga-cover" alt="LES AMIS DE MA BELLE MÈRE">
+					<div class="card-body d-flex flex-column text-center">
+						<div class="manga-title">💋LES AMIS DE MA BELLE MÈRE <br> EP 1</div>
+						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+							data-pdf-url="https://drive.google.com/file/d/1BW67EZMDeqz4Vh6ZiJXCe33Hmp7BkxCB/view">Ouvrir</a>
+					</div>
+				</div>
+
+
+				<!-- 9 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center"
+					data-id="4">
+					<img src="images/pic4.jpg" class="card-img-top manga-cover" alt="MAIDENS IN LAW ">
+					<div class="card-body d-flex flex-column text-center">
+						<div class="manga-title">MAIDENS IN LAW<br> EP 1</div>
+						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+							data-pdf-url="https://drive.google.com/file/d/16-YTTV4g_w7jddojXNv3-5mtSS1snhA1/view">Ouvrir</a>
+					</div>
+				</div>
 			</div>
 		</section>
 		<!-- Section Érotiques -->
