--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     class="rectangle">
                 <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
                 <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
-                <img src="images/smooth .jpg" alt="ma brute" class="rectangle">
+                <img src="images/Soothe Me .jpg" alt="ma brute" class="rectangle">
                 <img src="images/Cohabitation forcée.jpg" alt="ma brute" class="rectangle">
                 <img src="images/Section 69.png" alt="Section 69" class="rectangle">
                 <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
@@ -137,30 +137,105 @@
         </div>
 
         <!-- Section Érotiques -->
-        <section id="erotiques" class="my-5">
+        <section id="erotiques" class="erotiques-section">
             <h2 class="text-center mb-4">Érotiques</h2>
             <div class="age-warning text-center">Attention : Contenu pour adultes (18+)</div>
-            <div class="image-carousel">
-                <div class="image-container">
-                    <img src="images/Section 69.png" alt="Section 69" class="rectangle">
-                    <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
-                    <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
-                        class="rectangle">
-                    <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
-                    <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
-                    <!-- Ajoutez d'autres images ici -->
-                    <img src="images/smooth .jpg" alt="ma brute" class="rectangle">
-                    <img src="images/Cohabitation forcée.jpg" alt="ma brute" class="rectangle">
-                    <img src="images/Section 69.png" alt="Section 69" class="rectangle">
-                    <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
-                    <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
-                        class="rectangle">
 
-                    <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
-                    <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
+            <!-- Image à gauche, Texte à droite -->
+            <div class="content-pair ">
+                <div class="content-text">
+                    <h3>💋LES AMIS DE MA BELLE MÈRE VF (1-60)</h3>
+                    <p> J'ai perdu ma mère quand j'étais jeune, elle nous a quittés, mon père et moi, pour vivre
+                        ensemble. Mon père voulait soulager ma douleur, il m'a laissé vivre une vie sans souci. Puis,
+                        soudain, un jour, mon père m'a présenté une jeune et belle femme qui s'est mariée parce qu'elle
+                        convoitait la propriété de l'homme. La voyant aimer sincèrement mon père, j'ai commencé à lui
+                        ouvrir mon cœur progressivement, cependant...</p>
                 </div>
             </div>
 
+            <div class="content-image">
+                <img src="images/pic3.jpg" alt="LES AMIS DE MA BELLE MÈRE">
+            </div>
+
+
+            <!-- Image à gauche, Texte à droite -->
+            <div class="content-pair ">
+                <div class="content-text">
+                    <h3>MAIDENS IN LAW</h3>
+                    <p> Après 7 ans d'amour non partagé envers Jung Eunkyung qui ne s'intéressait qu'à Park Kyutae, Park
+                        Hyungsoo a commencé à avoir des sentiments pour la femme de son frère aîné. Outre Jung Eunkyung
+                        et Da Boyoung, Hyungsoo, il s'est également senti attiré par d'autres femmes ... Ses
+                        belles-sœurs ... Quel choix fera-t-il dans une relation interdite où tout doit être gardé
+                        secret?</p>
+                </div>
+            </div>
+
+            <!-- Texte à gauche, Image à droite -->
+            <div class="content-pair">
+                <div class="content-text">
+                    <h3>Section 69</h3>
+                    <p>Une série passionnante qui explore des thèmes audacieux avec des personnages captivants. Plongez
+                        dans cette aventure érotique avec style et intensité.</p>
+                </div>
+            </div>
+
+            <div class="content-image">
+                <img src="images/pic.jpg" alt="Cohabitation forcée">
+            </div>
+
+            <!-- Image à gauche, Texte à droite -->
+            <div class="content-pair">
+                <div class="content-text">
+                    <h3>Margarethe</h3>
+                    <p>Découvrez Margarethe, un manga où l'intensité des émotions se mêle à des illustrations
+                        somptueuses. Une œuvre qui ravira les amateurs de contenu mature.</p>
+                </div>
+            </div>
+
+            <div class="content-image">
+                <img src="images/pic2.jpg" alt="Cohabitation forcée">
+            </div>
+
+            <!-- Texte à gauche, Image à droite -->
+            <div class="content-pair">
+                <div class="content-text">
+                    <h3>La Bourgeoise et le Nécessiteux</h3>
+                    <p>Une histoire entre une bourgeoise et un nécessiteux, révélant un monde de séduction et de désir
+                        inattendu. Laissez-vous emporter par ce récit captivant.</p>
+                </div>
+            </div>
+
+            <!-- Texte à gauche, Image à droite -->
+            <div class="content-pair">
+                <div class="content-text">
+                    <h3>Ma brute</h3>
+                    <p>Avec un mélange de brutalité et de tendresse, ce manga explore des territoires inexplorés,
+                        laissant une impression durable.</p>
+                </div>
+            </div>
+
+            <!-- Image à gauche, Texte à droite -->
+            <div class="content-pair ">
+                <div class="content-text">
+                    <h3>Soothe Me</h3>
+                    <p>Soothe Me vous emmène dans un monde d'élégance et de sensualité. Un chef-d'œuvre artistique à ne
+                        pas
+                        manquer.</p>
+                </div>
+            </div>
+
+            <!-- Texte à gauche, Image à droite -->
+            <div class="content-pair">
+                <div class="content-text">
+                    <h3>Cohabitation forcée</h3>
+                    <p>Deux personnalités opposées sous le même toit. Que pourrait-il se passer ? Un manga plein de
+                        surprises et de moments intenses.</p>
+                    <p>Depuis le lycée, Jinsoo est le larbin de Ahn Dajeong qui lui fait vivre un enfer. Alors qu'il
+                        pensait qu'en allait à la fac tout serait fini, il se retrouve à cohabiter avec cette
+                        dernière.<br>
+                        Déconseillé : Moins de 18 ans</p>
+                </div>
+            </div>
         </section>
         <!-- Section Érotiques -->
 
@@ -201,7 +276,6 @@
                 border-radius: 8px;
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
                 position: relative;
-                background: #e0e0e0;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -236,8 +310,14 @@
             .download-btn:hover {
                 background-color: #ff3377;
             }
-        </style>
 
+            @media (max-width: 600px) {
+                .fond-gallery {
+                    grid-template-columns: repeat(2, 1fr);
+                    /* 2 images par ligne sur les petits écrans */
+                }
+            }
+        </style>
         <!-- Section Fond d'écran -->
         <section class="fond-section" id="fond-ecran">
             <h2 class="text-center mb-4">Fond d'écran</h2>
@@ -245,104 +325,6 @@
                 <!-- Les images seront affichées ici -->
             </div>
         </section>
-
-        <script>
-            document.addEventListener("DOMContentLoaded", function () {
-                // Liste d'images dans le dossier "fond"
-                const fondImageList = [
-                    "fond/1.png",
-                    "fond/2.png",
-                    "fond/3.png",
-                    "fond/4.png",
-                    "fond/5.png",
-                    "fond/6.png",
-                    "fond/7.png",
-                    "fond/8.png",
-                    "fond/9.png",
-                    "fond/10.png",
-                    "fond/11.png",
-                    "fond/12.png",
-                    "fond/13.png",
-                    "fond/14.png",
-                    "fond/15.png",
-                    "fond/16.png",
-                    "fond/17.png",
-                    "fond/18.png",
-                    "fond/19.png",
-                    "fond/20.png",
-                    "fond/21.png",
-                    "fond/22.png",
-                    "fond/23.png",
-                    "fond/24.png",
-                    "fond/25.png",
-                    "fond/26.png",
-                    "fond/27.png",
-                    "fond/28.png",
-                    "fond/29.png",
-                    "fond/30.png",
-                    "fond/31.png",
-                    "fond/32.png",
-                    "fond/33.png",
-                    "fond/34.png",
-                    "fond/35.png",
-                    "fond/36.png",
-                    "fond/37.png",
-                    "fond/38.png",
-                    "fond/39.png",
-                    "fond/40.png",
-                    "fond/41.png",
-                    "fond/42.png",
-                    "fond/43.png",
-                    "fond/44.png",
-                    "fond/45.png",
-                    "fond/46.png",
-                    "fond/47.png",
-                    "fond/48.png",
-                    "fond/49.png",
-                    "fond/50.png",
-                    "fond/51.png",
-                    "fond/52.png",
-                    "fond/53.png",
-                    "fond/54.png",
-                    "fond/55.png",
-                    "fond/56.png",
-                    "fond/57.png",
-                    "fond/58.png",
-                    "fond/59.png",
-                    "fond/60.png",
-                    "fond/61.png"
-
-                ];
-
-                const fondGallery = document.getElementById("fondGallery");
-
-                // Ajout dynamique des images à la galerie avec un conteneur et bouton de téléchargement pour chaque image
-                fondImageList.forEach(imagePath => {
-                    // Conteneur de l'image et du bouton
-                    const fondContainer = document.createElement("div");
-                    fondContainer.className = "fond-image-container";
-
-                    // Élément d'image
-                    const fondImgElement = document.createElement("img");
-                    fondImgElement.src = imagePath;
-                    fondImgElement.alt = "Fond d'écran";
-
-                    // Bouton de téléchargement
-                    const downloadButton = document.createElement("a");
-                    downloadButton.href = imagePath;  // Lien vers l'image
-                    downloadButton.download = imagePath.split('/').pop();  // Nom du fichier à télécharger
-                    downloadButton.className = "download-btn";
-                    downloadButton.textContent = "Download";
-
-                    // Ajout de l'image et du bouton dans le conteneur
-                    fondContainer.appendChild(fondImgElement);
-                    fondContainer.appendChild(downloadButton);
-
-                    // Ajout du conteneur complet à la galerie
-                    fondGallery.appendChild(fondContainer);
-                });
-            });
-        </script>
 
         <!-- pieds de page -->
         <footer>
@@ -404,6 +386,7 @@
 
     <!-- Main JS File -->
     <script src="js/utils.js"></script>
+    <script src="js/util1.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
 
     <script>
