--- a/recherche.html
+++ b/recherche.html
@@ -283,13 +283,13 @@
                     </div>
                 </div>
 
-                <!-- Smooth ep 1 -->
+                <!-- SOOTHE ME ep 1 -->
                 <div class="manga-item" data-id="2">
                     <img src="images/smooth .jpg"
                         alt="Couverture de manga: Margarethe, style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
-                        <div class="manga-title">Smooth <br>ep 1</div>
+                        <div class="manga-title">SOOTHE ME <br>ep 1</div>
                         <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
                             data-pdf-url="https://drive.google.com/file/d/1JxielFqrorcR3Rq2zHoVNTdtVENcVBsW/view?usp=drive_link">Ouvrir</a>
                     </div>
@@ -319,6 +319,149 @@
                     </div>
                 </div>
 
+                <!-- LES AMIS DE MA BELLE MÈRE ep 1 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic33.jpg"
+                        alt="Couverture de manga: LES AMIS DE MA BELLE MÈRE, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">💋LES AMIS DE MA BELLE MÈRE <br> EP 1</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1BW67EZMDeqz4Vh6ZiJXCe33Hmp7BkxCB/view">Ouvrir</a>
+                    </div>
+                </div>
+
+
+                <!-- MAIDENS IN LAW ep 1 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic44.jpg"
+                        alt="Couverture de manga: MAIDENS IN LAW, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">MAIDENS IN LAW <br> EP 1</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/16-YTTV4g_w7jddojXNv3-5mtSS1snhA1/view">Ouvrir</a>
+                    </div>
+                </div>
+
+                <!-- LES AMIS DE MA BELLE MÈRE ep 2 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic33.jpg"
+                        alt="Couverture de manga: LES AMIS DE MA BELLE MÈRE, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">💋LES AMIS DE MA BELLE MÈRE <br> EP 2</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1BW67EZMDeqz4Vh6ZiJXCe33Hmp7BkxCB/view">Ouvrir</a>
+                    </div>
+                </div>
+
+                <!-- LES AMIS DE MA BELLE MÈRE ep 3 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic33.jpg"
+                        alt="Couverture de manga: LES AMIS DE MA BELLE MÈRE, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">💋LES AMIS DE MA BELLE MÈRE <br> EP 3</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1qeZqMrNWHiOkvHe3_OrW5vMedGnn0J3H/view">Ouvrir</a>
+                    </div>
+                </div>
+
+                <!-- LES AMIS DE MA BELLE MÈRE ep 4 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic33.jpg"
+                        alt="Couverture de manga: LES AMIS DE MA BELLE MÈRE, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">💋LES AMIS DE MA BELLE MÈRE <br> EP 4</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1K7tmBZSsoYQ9sEKI5ykBalVzfVGq2s5h/view">Ouvrir</a>
+                    </div>
+                </div>
+
+                <!-- LES AMIS DE MA BELLE MÈRE ep 5 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic33.jpg"
+                        alt="Couverture de manga: LES AMIS DE MA BELLE MÈRE, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">💋LES AMIS DE MA BELLE MÈRE <br> EP 5</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1d_lWLAAraaGraIC1FcyY9YcPbKzNOUGb/view">Ouvrir</a>
+                    </div>
+                </div>
+
+
+                <!-- LES AMIS DE MA BELLE MÈRE ep 5 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic33.jpg"
+                        alt="Couverture de manga: LES AMIS DE MA BELLE MÈRE , style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">💋LES AMIS DE MA BELLE MÈRE <br> EP 6-60</div>
+                        <a class="btn btn-custom mt-3 pdf-sub" data-pdf-url="">Telecharger</a>
+                    </div>
+                </div>
+
+                <!-- MAIDENS IN LAW ep 2 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic44.jpg"
+                        alt="Couverture de manga: MAIDENS IN LAW, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">MAIDENS IN LAW <br> EP 2</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link" data-pdf-url=" ">Ouvrir</a>
+                    </div>
+                </div>
+
+                <!-- MAIDENS IN LAW ep 3 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic44.jpg"
+                        alt="Couverture de manga: MAIDENS IN LAW, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">MAIDENS IN LAW <br> EP 3</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1GI3ajrUCRJLUeAIeQiK3lmAiAGMAvX1Y/view?usp=drive_link">Ouvrir</a>
+                    </div>
+                </div>
+
+                <!-- MAIDENS IN LAW ep 4 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic44.jpg"
+                        alt="Couverture de manga: MAIDENS IN LAW, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">MAIDENS IN LAW <br> EP 4</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/19_0xXmSe5mdxllW_Vd11MGjIFlOV5JDe/view">Ouvrir</a>
+                    </div>
+                </div>
+
+                <!-- MAIDENS IN LAW ep 5 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic44.jpg"
+                        alt="Couverture de manga: MAIDENS IN LAW, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">MAIDENS IN LAW <br> EP 5</div>
+                        <a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+                            data-pdf-url="https://drive.google.com/file/d/1oIqsGKylRVqpBgRx9QO4_TQc4ekh30JX/view">Ouvrir</a>
+                    </div>
+                </div>
+
+
+                <!-- LES AMIS DE MA BELLE MÈRE ep 5 -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic44.jpg"
+                        alt="Couverture de manga: MAIDENS IN LAW , style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">MAIDENS IN LAW <br> EP 6-30</div>
+                        <a class="btn btn-custom mt-3 pdf-sub" data-pdf-url="">Telecharger</a>
+                    </div>
+                </div>
 
             </div>
 
