modified:   index.html 	new file:   node_modules/.package-lock.json 	new file:   node_modules/@vercel/analytics/LICENSE 	new file:   node_modules/@vercel/analytics/README.md 	new file:   node_modules/@vercel/analytics/dist/index.d.mts 	new file:   node_modules/@vercel/analytics/dist/index.d.ts 	new file:   node_modules/@vercel/analytics/dist/index.js 	new file:   node_modules/@vercel/analytics/dist/index.js.map 	new file:   node_modules/@vercel/analytics/dist/index.mjs 	new file:   node_modules/@vercel/analytics/dist/index.mjs.map 	new file:   node_modules/@vercel/analytics/dist/next/index.d.mts 	new file:   node_modules/@vercel/analytics/dist/next/index.d.ts 	new file:   node_modules/@vercel/analytics/dist/next/index.js 	new file:   node_modules/@vercel/analytics/dist/next/index.js.map 	new file:   node_modules/@vercel/analytics/dist/next/index.mjs 	new file:   node_modules/@vercel/analytics/dist/next/index.mjs.map 	new file:   node_modules/@vercel/analytics/dist/react/index.d.mts 	new file:   node_modules/@vercel/analytics/dist/react/index.d.ts 	new file:   node_modules/@vercel/analytics/dist/react/index.js 	new file:   node_modules/@vercel/analytics/dist/react/index.js.map 	new file:   node_modules/@vercel/analytics/dist/react/index.mjs 	new file:   node_modules/@vercel/analytics/dist/react/index.mjs.map 	new file:   node_modules/@vercel/analytics/dist/server/index.d.mts 	new file:   node_modules/@vercel/analytics/dist/server/index.d.ts 	new file:   node_modules/@vercel/analytics/dist/server/index.js 	new file:   node_modules/@vercel/analytics/dist/server/index.js.map 	new file:   node_modules/@vercel/analytics/dist/server/index.mjs 	new file:   node_modules/@vercel/analytics/dist/server/index.mjs.map 	new file:   node_modules/@vercel/analytics/jest.config.js 	new file:   node_modules/@vercel/analytics/jest.setup.ts 	new file:   node_modules/@vercel/analytics/package.json 	new file:   node_modules/@vercel/analytics/tsconfig.json 	new file:   node_modules/@vercel/

--- a/index.html
+++ b/index.html
@@ -423,6 +423,10 @@
         });
     </script>
 
+    <!-- Ajoutez ce code dans le fichier HTML de votre site, dans la balise <head> -->
+    <script src="https://cdn.vercel-insights.com/v1/script.js" defer data-token="VOTRE_TOKEN_ANALYTICS"></script>
+
+
 
 </body>
 
