modified:   classique.html 	modified:   index.html 	modified:   lecteur.html 	modified:   recherche.html

--- a/index.html
+++ b/index.html
@@ -127,12 +127,14 @@
                     class="rectangle">
                 <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
                 <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
-                <img src="images/Soothe Me .jpg" alt="ma brute" class="rectangle">
+                <img src="images/smooth .jpg" alt="ma brute" class="rectangle">
                 <img src="images/Cohabitation forcée.jpg" alt="ma brute" class="rectangle">
+                <img src="images/pic33.jpg" alt="ma brute" class="rectangle">
                 <img src="images/Section 69.png" alt="Section 69" class="rectangle">
                 <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
                 <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
                     class="rectangle">
+                <img src="images/pic44.jpg" alt="ma brute" class="rectangle">
             </div>
         </div>
 
@@ -167,6 +169,18 @@
                         et Da Boyoung, Hyungsoo, il s'est également senti attiré par d'autres femmes ... Ses
                         belles-sœurs ... Quel choix fera-t-il dans une relation interdite où tout doit être gardé
                         secret?</p>
+                </div>
+            </div>
+
+            <div class="content-pair ">
+                <div class="content-text">
+                    <h3>💋LES AMIS DE MA FILLE (Bientot)</h3>
+                    <p> Si-Hoon élève seul sa fille tout en vivant la vie d'une idole dans le passé et d'un compositeur
+                        maintenant. Il parcourt accidentellement les SNS de sa fille et tombe amoureux de sa fille
+                        idéale.
+                        Puis, un jour, Si-Hoon franchit la ligne qu'il ne fallait pas franchir par la provocation
+                        audacieuse
+                        de l'amie de sa fille venue jouer à la maison.</p>
                 </div>
             </div>
 
