modified:   index.html

--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
                     class="rectangle">
                 <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
                 <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
-                <img src="images/smooth .jpg" alt="ma brute" class="rectangle">
                 <img src="images/Cohabitation forcée.jpg" alt="ma brute" class="rectangle">
                 <img src="images/pic33.jpg" alt="ma brute" class="rectangle">
                 <img src="images/Section 69.png" alt="Section 69" class="rectangle">
@@ -174,7 +173,7 @@
 
             <div class="content-pair ">
                 <div class="content-text">
-                    <h3>💋LES AMIS DE MA FILLE (Bientot)</h3>
+                    <h3>LES AMIS DE MA FILLE (Bientot)</h3>
                     <p> Si-Hoon élève seul sa fille tout en vivant la vie d'une idole dans le passé et d'un compositeur
                         maintenant. Il parcourt accidentellement les SNS de sa fille et tombe amoureux de sa fille
                         idéale.
